refactor(exceptions): consolidate application exception hierarchy
Introduce shared application exception categories with structured error metadata, update global error responses, migrate resource-specific not-found and conflict failures, and remove redundant custom exception classes.

Keep token, search-filter, and phone-number exceptions separate while updating affected tests to assert the shared exception categories.