@@ -2,6 +2,7 @@ package br.org.gam.api.rbac.AccountRole.application;
 
 import br.org.gam.api.rbac.AccountRole.persistence.AccountRoleEntity;
 import br.org.gam.api.rbac.AccountRole.persistence.AccountRoleRepository;
+import br.org.gam.api.shared.exception.NotFoundException;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -15,8 +16,9 @@ public class AccountRoleEntityLoader {
 
     public AccountRoleEntity requiredByDTO(AccountRoleDTO dto) {
         return accountRoleRepo.findByAccount_IdAndRole_Id(dto.accountId(), dto.roleId())
-                .orElseThrow(() -> new AccountRoleNotFoundException(
-                        String.format("Account with id: %s does not have role with id: %s", dto.accountId(), dto.roleId())
+                .orElseThrow(() -> NotFoundException.resource(
+                        "AccountRole",
+                        "%s:%s".formatted(dto.accountId(), dto.roleId())
                 ));
     }
 }
